objects/APTS_Segment_Threshold__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Category__c</fullName>
        <label>Customer Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>1. Best</fullName>
                    <isActive>false</isActive>
                    <label>1. Best</label>
                </value>
                <value>
                    <fullName>3. Average</fullName>
                    <isActive>false</isActive>
                    <label>3. Average</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Minimum_Incremental_Growth__c</fullName>
        <label>Minimum Incremental Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Minimum_OY_Increase__c</fullName>
        <label>Minimum OY Increase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Clear</fullName>
                </value>
                <value>
                    <fullName>CLEAR</fullName>
                </value>
                <value>
                    <fullName>PRINT LEGAL SOLUTIONS</fullName>
                </value>
                <value>
                    <fullName>PROVIEW LEGAL SOLUTIONS</fullName>
                </value>
                <value>
                    <fullName>PONDERA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Promo_Codes__c</fullName>
        <label>Promo Codes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Promo_Minimum_Incremental_Growth__c</fullName>
        <label>Promo Minimum Incremental Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Promo_Minimum_OY_Increase__c</fullName>
        <label>Promo Minimum OY Increase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Renewal_Window__c</fullName>
        <description>Created as part of DOC-14800</description>
        <label>Renewal Window</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Corporate Investigative</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Government - CLEAR</fullName>
                </value>
                <value>
                    <fullName>Large/Medium Law</fullName>
                </value>
                <value>
                    <fullName>Small Law</fullName>
                </value>
                <value>
                    <fullName>FindLaw</fullName>
                </value>
                <value>
                    <fullName>LMS Channel</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Medium Law</fullName>
                </value>
                <value>
                    <fullName>Solo/Small Law Firm</fullName>
                    <isActive>false</isActive>
                    <label>Solo/Small Law Firm</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Term_in_years__c</fullName>
        <label>Term (in years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Segment Threshold</label>
    <listViews>
        <fullName>All_Segments</fullName>
        <columns>APTS_Segment__c</columns>
        <columns>APTS_Product_Family__c</columns>
        <columns>APTS_Customer_Category__c</columns>
        <columns>APTS_Term_in_years__c</columns>
        <columns>APTS_Minimum_Incremental_Growth__c</columns>
        <columns>APTS_Minimum_OY_Increase__c</columns>
        <columns>APTS_Approval_Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Segments</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Segment Threshold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segment Thresholds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>